--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "echarts": "^4.9.0",
     "element-ui": "^2.15.0",
     "js-cookie": "^2.2.1",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-meta": "^2.4.0",
     "vue-router": "^3.5.1",
